# e-commerce

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
website_sale_b2x_alt_price/: README.rst
website_sale_b2x_alt_price/static/description/: index.html
website_sale_checkout_skip_payment/: README.rst
website_sale_checkout_skip_payment/static/description/: index.html
website_sale_hide_empty_category/: README.rst
website_sale_hide_empty_category/i18n/: it.po
website_sale_hide_empty_category/readme/: CONTRIBUTORS.md
website_sale_menu_partner_top_selling/: README.rst
website_sale_menu_partner_top_selling/i18n/: website_sale_menu_partner_top_selling.pot
website_sale_order_cancel/: README.rst
website_sale_order_cancel/i18n/: website_sale_order_cancel.pot
website_sale_order_cancel/static/description/: index.html
website_sale_order_type/: README.rst
website_sale_order_type/readme/: DESCRIPTION.md
website_sale_product_detail_attribute_image/: README.rst
website_sale_product_detail_attribute_image/readme/: CONTRIBUTORS.md  USAGE.md
website_sale_require_legal/: README.rst
website_sale_require_legal/controllers/: main.py
website_sale_require_legal/readme/: CONFIGURE.md
website_sale_secondary_unit/: README.rst
website_sale_secondary_unit/models/: sale_order.py
website_sale_secondary_unit/readme/: CONTRIBUTORS.md
website_sale_stock_order_cancel/: README.rst
website_sale_stock_order_cancel/i18n/: website_sale_stock_order_cancel.pot
website_snippet_product_category/: README.rst
website_snippet_product_category/readme/: CONFIGURE.md
(+11 files in other folders)
