[project]
name = "odoo-addons-oca-e-commerce"
version = "17.0.20250204.1"
dependencies = [
    "odoo-addon-website_sale_b2x_alt_price>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_checkout_skip_payment>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_hide_empty_category>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_hide_price>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_product_description>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_product_detail_attribute_image>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_product_reference_displayed>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_require_legal>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_secondary_unit>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_suggest_create_account>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
